[package]
name = "werson"
version = "0.1.0"
authors = ["Felicitas Pojtinger <felicitas@pojtinger.com>"]
edition = "2018"
description = "Rust implementation of https://github.com/pojntfx/weron."
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tun = "0.3.13"
tokio = { version = "1.7.1", features = ["full"] }
clap = "3.0.0-beta.2"
tracing = "0.1.26"
tracing-bunyan-formatter = "0.2.4"
tracing-subscriber = "0.2.19"
scopeguard = "1.1.0"
